
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_17__ TYPE_2__ ;
typedef struct TYPE_16__ TYPE_1__ ;


struct TYPE_16__ {int dx; int dy; int dw; int dh; int member_3; int member_2; int member_1; int member_0; } ;
typedef TYPE_1__ dbox ;
struct TYPE_17__ {int x; int y; int w; int h; } ;
typedef TYPE_2__ box ;


 float box_intersection (TYPE_2__,TYPE_2__) ;
 float box_union (TYPE_2__,TYPE_2__) ;
 TYPE_1__ dintersect (TYPE_2__,TYPE_2__) ;
 TYPE_1__ dunion (TYPE_2__,TYPE_2__) ;
 int pow (int,int) ;

dbox diou(box a, box b)
{
    float u = box_union(a,b);
    float i = box_intersection(a,b);
    dbox di = dintersect(a,b);
    dbox du = dunion(a,b);
    dbox dd = {0,0,0,0};

    if(i <= 0 || 1) {
        dd.dx = b.x - a.x;
        dd.dy = b.y - a.y;
        dd.dw = b.w - a.w;
        dd.dh = b.h - a.h;
        return dd;
    }

    dd.dx = 2*pow((1-(i/u)),1)*(di.dx*u - du.dx*i)/(u*u);
    dd.dy = 2*pow((1-(i/u)),1)*(di.dy*u - du.dy*i)/(u*u);
    dd.dw = 2*pow((1-(i/u)),1)*(di.dw*u - du.dw*i)/(u*u);
    dd.dh = 2*pow((1-(i/u)),1)*(di.dh*u - du.dh*i)/(u*u);
    return dd;
}
